// Copyright 2024 The O-RAN Near-RT RIC Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package federatedlearning

import (
	"context"
	"crypto/ed25519"
	"sync"
	"time"

	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
)

// RRMTaskType represents the type of RRM task in O-RAN
type RRMTaskType string

const (
	RRMTaskResourceAllocation     RRMTaskType = "resource_allocation"
	RRMTaskTrafficPrediction      RRMTaskType = "traffic_prediction"
	RRMTaskLoadBalancing          RRMTaskType = "load_balancing"
	RRMTaskInterferenceManagement RRMTaskType = "interference_management"
	RRMTaskEnergyOptimization     RRMTaskType = "energy_optimization"
	RRMTaskQoSOptimization        RRMTaskType = "qos_optimization"
)

// CoordinatorRole represents the role of the coordinator
type CoordinatorRole string

const (
	CoordinatorRoleMaster   CoordinatorRole = "master"
	CoordinatorRoleRegional CoordinatorRole = "regional"
	MasterCoordinatorRole   CoordinatorRole = "master"  // Alias for compatibility
)

// TrainingJob represents a federated learning training job
type TrainingJob struct {
	ID                string                    `json:"id"`
	Name              string                    `json:"name"`
	ModelID           string                    `json:"model_id"`
	RRMTask           RRMTaskType              `json:"rrm_task"`
	TrainingConfig    TrainingConfiguration    `json:"training_config"`
	AggregationAlg    AggregationAlgorithm     `json:"aggregation_algorithm"`
	PrivacyMech       PrivacyMechanism         `json:"privacy_mechanism"`
	PrivacyParams     PrivacyParameters        `json:"privacy_params"`
	RequiredClients   int                      `json:"required_clients"`
	MaxRounds         int64                    `json:"max_rounds"`
	TargetAccuracy    float64                  `json:"target_accuracy"`
	Status            TrainingStatus           `json:"status"`
	CurrentRound      int64                    `json:"current_round"`
	CreatedAt         time.Time                `json:"created_at"`
	UpdatedAt         time.Time                `json:"updated_at"`
	StartedAt         *time.Time               `json:"started_at,omitempty"`
	CompletedAt       *time.Time               `json:"completed_at,omitempty"`
	ObjectMeta        metav1.ObjectMeta        `json:"metadata,omitempty"`
}

// TrainingJobSpec represents the specification for creating a training job
type TrainingJobSpec struct {
	Name              string                 `json:"name"`
	ModelID           string                 `json:"model_id"`
	RRMTask           RRMTaskType           `json:"rrm_task"`
	TrainingConfig    TrainingConfiguration `json:"training_config"`
	AggregationAlg    AggregationAlgorithm  `json:"aggregation_algorithm"`
	PrivacyMech       PrivacyMechanism      `json:"privacy_mechanism"`
	PrivacyParams     PrivacyParameters     `json:"privacy_params"`
	RequiredClients   int                   `json:"required_clients"`
	MaxRounds         int64                 `json:"max_rounds"`
	TargetAccuracy    float64               `json:"target_accuracy"`
}

// ClientSelector represents criteria for selecting clients
type ClientSelector struct {
	RRMTasks         []RRMTaskType `json:"rrm_tasks,omitempty"`
	MinTrust         float64       `json:"min_trust,omitempty"`
	MaxClients       int           `json:"max_clients,omitempty"`
	MinTrustScore    float64       `json:"min_trust_score,omitempty"`
	GeographicZone   string        `json:"geographic_zone,omitempty"`
	MatchRRMTasks    bool          `json:"match_rrm_tasks,omitempty"`
}

// ResourceRequirements represents resource requirements for training
type ResourceRequirements struct {
	CPUCores     int     `json:"cpu_cores"`
	MemoryGB     int     `json:"memory_gb"`
	GPUMemoryGB  int     `json:"gpu_memory_gb,omitempty"`
	NetworkBwMbps int    `json:"network_bw_mbps"`
}

// Additional type definitions for compilation
type TrainingMetrics struct {
	Accuracy    float64 `json:"accuracy"`
	Loss        float64 `json:"loss"`
	Convergence float64 `json:"convergence"`
}

type ValidationResult struct {
	Accuracy  float64 `json:"accuracy"`
	Precision float64 `json:"precision"`
	Recall    float64 `json:"recall"`
	F1Score   float64 `json:"f1_score"`
}

type ResourceConstraints struct {
	MaxCPUCores    int     `json:"max_cpu_cores"`
	MaxMemoryGB    int     `json:"max_memory_gb"`
	MaxGPUMemoryGB int     `json:"max_gpu_memory_gb"`
	MaxBandwidthMbps int   `json:"max_bandwidth_mbps"`
}

type StrategyConfig struct {
	Name       string                 `json:"name"`
	Parameters map[string]interface{} `json:"parameters"`
}

type ComputeRequirement struct {
	CPUCores    int `json:"cpu_cores"`
	MemoryMB    int `json:"memory_mb"`
	GPUMemoryMB int `json:"gpu_memory_mb"`
}

type ResourceLimit struct {
	MaxCPUUtilization    float64 `json:"max_cpu_utilization"`
	MaxMemoryUtilization float64 `json:"max_memory_utilization"`
	MaxNetworkBandwidth  int     `json:"max_network_bandwidth"`
}

type SecurityLevel string
type PrivacyLevel string  
type CertificationLevel string

const (
	SecurityLevelLow    SecurityLevel = "low"
	SecurityLevelMedium SecurityLevel = "medium"
	SecurityLevelHigh   SecurityLevel = "high"
	
	PrivacyLevelBasic    PrivacyLevel = "basic"
	PrivacyLevelStandard PrivacyLevel = "standard"
	PrivacyLevelAdvanced PrivacyLevel = "advanced"
	
	CertificationLevelBasic      CertificationLevel = "basic"
	CertificationLevelStandard   CertificationLevel = "standard"
	CertificationLevelAdvanced   CertificationLevel = "advanced"
)

type RRMTaskMetrics struct {
	TaskType       RRMTaskType `json:"task_type"`
	PerformanceScore float64   `json:"performance_score"`
	CompletionRate   float64   `json:"completion_rate"`
}

type NetworkSliceMetrics struct {
	SliceID    string  `json:"slice_id"`
	Latency    float64 `json:"latency"`
	Throughput float64 `json:"throughput"`
	PacketLoss float64 `json:"packet_loss"`
}

type TrendDirection string

const (
	TrendDirectionUp     TrendDirection = "up"
	TrendDirectionDown   TrendDirection = "down"
	TrendDirectionStable TrendDirection = "stable"
)

type ByzantineDetectionType string

const (
	ByzantineDetectionStatistical ByzantineDetectionType = "statistical"
	ByzantineDetectionBehavioral  ByzantineDetectionType = "behavioral"
	ByzantineDetectionConsensus   ByzantineDetectionType = "consensus"
)

type ThreatSeverity string

const (
	ThreatSeverityLow      ThreatSeverity = "low"
	ThreatSeverityMedium   ThreatSeverity = "medium"
	ThreatSeverityHigh     ThreatSeverity = "high"
	ThreatSeverityCritical ThreatSeverity = "critical"
)

type PerformanceAnomaly struct {
	MetricType string  `json:"metric_type"`
	Expected   float64 `json:"expected"`
	Actual     float64 `json:"actual"`
	Deviation  float64 `json:"deviation"`
}

type BehaviorInconsistency struct {
	ExpectedBehavior string `json:"expected_behavior"`
	ActualBehavior   string `json:"actual_behavior"`
	ConfidenceScore  float64 `json:"confidence_score"`
}

type StatisticalOutlier struct {
	Value      float64 `json:"value"`
	Mean       float64 `json:"mean"`
	StdDev     float64 `json:"std_dev"`
	ZScore     float64 `json:"z_score"`
}

type NetworkAnomaly struct {
	Type        string  `json:"type"`
	Severity    string  `json:"severity"`
	Description string  `json:"description"`
	Confidence  float64 `json:"confidence"`
}

// gRPC related types for FederatedLearning service
type FederatedLearning_HandleTrainingServer interface {
	// gRPC streaming server interface placeholder
}

type FederatedLearning_HandleTrainingClient interface {
	// gRPC streaming client interface placeholder  
}

type TrainingRequest struct {
	JobID     string `json:"job_id"`
	ModelData []byte `json:"model_data"`
}

type TrainingRequest_Registration struct {
	ClientInfo *FLClient `json:"client_info"`
}

type TrainingRequest_Update struct {
	ModelUpdate *ModelUpdate `json:"model_update"`
}

type TrainingRequest_Heartbeat struct {
	ClientID  string    `json:"client_id"`
	Timestamp time.Time `json:"timestamp"`
}

type TrainingResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type SubmitModelUpdateRequest struct {
	ClientID   string `json:"client_id"`
	JobID      string `json:"job_id"`
	ModelUpdate []byte `json:"model_update"`
}

type SubmitModelUpdateResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type FederatedLearningClient interface {
	// gRPC client interface placeholder
}

type RegionalCoordinatorClient struct {
	ID       string `json:"id"`
	Endpoint string `json:"endpoint"`
}

type FederatedLearningManager interface {
	// Manager interface placeholder
}

// ClientStore is an interface for storing and retrieving client information.
type ClientStore interface {
	Store(ctx context.Context, client *FLClient) error
	Get(ctx context.Context, clientID string) (*FLClient, error)
	Delete(ctx context.Context, clientID string) error
	List(ctx context.Context) ([]*FLClient, error)
}

// ModelStore is an interface for storing and retrieving model information.
type ModelStore interface {
	CreateGlobalModel(ctx context.Context, model *GlobalModel) error
	GetGlobalModel(ctx context.Context, modelID string) (*GlobalModel, error)
	UpdateGlobalModel(ctx context.Context, model *GlobalModel) error
}

// MetricsStore is an interface for storing and retrieving metrics.
type MetricsStore interface {
	// TODO: Define methods for storing and retrieving metrics.
}

// CryptoEngine is an interface for cryptographic operations.
type CryptoEngine interface {
	StorePrivateKey(clientID string, privateKey ed25519.PrivateKey) error
	DeleteKeys(clientID string) error
}

// PrivacyEngine is an interface for privacy-preserving operations.
type PrivacyEngine interface {
	ApplyDifferentialPrivacy(data []byte, epsilon float64) ([]byte, error)
	ValidatePrivacyBudget(clientID string, requestedBudget float64) error
}

// TrustManager is an interface for managing client trust scores.
type TrustManager interface {
	RegisterClient(ctx context.Context, client *FLClient) error
	UnregisterClient(ctx context.Context, clientID string) error
	UpdateTrustScore(ctx context.Context, clientID string, score float64) error
	GetTrustScore(ctx context.Context, clientID string) (float64, error)
}

// TrainingOrchestrator is an interface for orchestrating training rounds.
type TrainingOrchestrator interface {
	StartRound(ctx context.Context, job *ActiveTrainingJob) error
	AggregateRound(ctx context.Context, updates []ModelUpdate) (*GlobalModel, error)
	ValidateParticipants(ctx context.Context, participants []*FLClient) error
}

// AggregationEngine is an interface for model aggregation.
type AggregationEngine interface {
	Aggregate(updates []ModelUpdate, algorithm AggregationAlgorithm, stalenessScores map[string]float64) (*GlobalModel, error)
	ValidateUpdate(update ModelUpdate) error
	ApplyPrivacyMechanism(model *GlobalModel, mechanism PrivacyMechanism) error
}

// MetricsCollector is an interface for collecting metrics.
type MetricsCollector interface {
	RecordClientRegistration(client *FLClient)
	RecordClientUnregistration(client *FLClient)
	RecordClientStatusChange(clientID string, oldStatus, newStatus FLClientStatus)
	RecordTrainingJobStart(job *TrainingJob)
	RecordRoundMetrics(metrics RoundMetrics)
	RecordTrainingJobCompletion(job *TrainingJob)
}

// AlertManager is an interface for sending alerts.
type AlertManager interface {
	SendAlert(alertType, message string, severity string) error
	ConfigureThresholds(thresholds map[string]float64) error
}

// ResourceManager is an interface for managing resources.
type ResourceManager interface {
	CheckAvailability(ctx context.Context, requirements ResourceRequirements) error
	AllocateResources(ctx context.Context, jobID string, requirements ResourceRequirements) error
	ReleaseResources(ctx context.Context, jobID string) error
}

// SchedulingEngine is an interface for scheduling training jobs.
type SchedulingEngine interface {
	ScheduleJob(ctx context.Context, job *TrainingJob) error
	CancelJob(ctx context.Context, jobID string) error
	GetScheduledJobs(ctx context.Context) ([]*TrainingJob, error)
}

// FLClient represents a federated learning client (xApp).
type FLClient struct {
	ID              string
	XAppName        string
	Endpoint        string
	RRMTasks        []RRMTaskType
	Status          FLClientStatus
	RegisteredAt    time.Time
	LastHeartbeat   time.Time
	UpdatedAt       time.Time
	TrustScore      float64
	PublicKey       ed25519.PublicKey
	NetworkSlices   []NetworkSliceInfo
	Metadata        map[string]string
}

// FLClientStatus represents the status of a federated learning client.
type FLClientStatus string

const (
	FLClientStatusRegistered FLClientStatus = "Registered"
	FLClientStatusIdle       FLClientStatus = "Idle"
	FLClientStatusTraining   FLClientStatus = "Training"
	FLClientStatusOffline    FLClientStatus = "Offline"
)

// NetworkSliceInfo represents a network slice.
type NetworkSliceInfo struct {
	ID   string
	Name string
}

// GlobalModel represents a global model.
type GlobalModel struct {
	ID             string
	Name           string
	Version        string
	RRMTask        RRMTaskType
	Format         ModelFormat
	Architecture   string
	Parameters     []byte
	ParametersHash string
	TrainingConfig TrainingConfiguration
	AggregationAlg AggregationAlgorithm
	PrivacyMech    PrivacyMechanism
	PrivacyParams  PrivacyParameters
	MaxRounds      int64
	TargetAccuracy float64
	Status         TrainingStatus
	CurrentRound   int64
	ModelMetrics   ModelMetrics
	CreatedAt      time.Time
	UpdatedAt      time.Time
}

// ModelFormat represents the format of a model.
type ModelFormat string

const (
	ModelFormatTensorFlow ModelFormat = "tensorflow"
	ModelFormatPyTorch    ModelFormat = "pytorch"
	ModelFormatONNX       ModelFormat = "onnx"
)

// TrainingConfiguration represents the configuration for a training job.
type TrainingConfiguration struct {
	BatchSize       int
	LocalEpochs     int
	LearningRate    float64
	MinParticipants int
	MaxParticipants int
	TimeoutSeconds  int
	TargetAccuracy  float64
	MaxRounds       int64
}

// AggregationAlgorithm represents the aggregation algorithm.
type AggregationAlgorithm string

const (
	AggregationFedAvg AggregationAlgorithm = "FedAvg"
)

// PrivacyMechanism represents the privacy mechanism.
type PrivacyMechanism string

const (
	PrivacyDifferential PrivacyMechanism = "DifferentialPrivacy"
)

// PrivacyParameters represents the parameters for a privacy mechanism.
type PrivacyParameters struct {
	Epsilon float64
	Delta   float64
}

// TrainingStatusPhase represents the phase of a training job.
type TrainingStatusPhase string

const (
	TrainingStatusInitializing TrainingStatusPhase = "Initializing"
	TrainingStatusWaiting      TrainingStatusPhase = "Waiting"
	TrainingStatusRunning      TrainingStatusPhase = "Running"
	TrainingStatusAggregating  TrainingStatusPhase = "Aggregating"
	TrainingStatusCompleted    TrainingStatusPhase = "Completed"
	TrainingStatusFailed       TrainingStatusPhase = "Failed"
	TrainingStatusPaused       TrainingStatusPhase = "Paused"
)

// TrainingStatus represents the status of a training job.
type TrainingStatus struct {
	Phase      TrainingStatusPhase `json:"phase"`
	LastUpdate time.Time           `json:"last_update"`
	Message    string              `json:"message,omitempty"`
}

// ModelMetrics represents the metrics of a model.
type ModelMetrics struct {
	Accuracy float64
	Loss     float64
}

// ModelUpdate represents a model update from a client.
type ModelUpdate struct {
	ClientID         string
	ModelID          string
	Round            int64
	Parameters       []byte
	ParametersHash   string
	DataSamplesCount int64
	LocalMetrics     ModelMetrics
	SubmissionTime   time.Time
}

// RoundMetrics represents the metrics of a training round.
type RoundMetrics struct {
	Round             int64
	Timestamp         time.Time
	ParticipatingClients int
	ModelMetrics      ModelMetrics
	AggregationTimeMs float64
}

// AsyncCoordinatorConfig represents the configuration for the async coordinator.
type AsyncCoordinatorConfig struct {
	CoordinatorConfig CoordinatorConfig
	JobPoolConfig     JobPoolConfig
	MaxInactiveTime   time.Duration
	AggregationWindow time.Duration
	MinParticipationRatio float64
	StalenessThreshold  time.Duration
}

// JobPoolConfig represents the configuration for the job pool.
type JobPoolConfig struct {
	MaxConcurrentJobs int
}

// JobQueue represents a queue of training jobs.
type JobQueue struct {
	jobs     chan jobTask
	workers  chan struct{}
	wg       sync.WaitGroup
	ctx      context.Context
	capacity int
}

type jobTask struct {
	job  *TrainingJob
	task func()
}

// NewJobQueue creates a new JobQueue.
func NewJobQueue(maxWorkers int) *JobQueue {
	return &JobQueue{
		jobs:     make(chan jobTask),
		workers:  make(chan struct{}, maxWorkers),
		capacity: maxWorkers,
	}
}

// Start starts the job queue.
func (q *JobQueue) Start(ctx context.Context) {
	q.ctx = ctx
	q.wg.Add(1)
	go func() {
		defer q.wg.Done()
		for {
			select {
			case <-q.ctx.Done():
				return
			case jobTask := <-q.jobs:
				q.workers <- struct{}{}
				q.wg.Add(1)
				go func(jt jobTask) {
					defer func() {
						<-q.workers
						q.wg.Done()
					}()
					if jt.task != nil {
						jt.task()
					}
				}(jobTask)
			}
		}
	}()
}

// Submit submits a job to the queue.
func (q *JobQueue) Submit(job *TrainingJob, task func()) {
	select {
	case q.jobs <- jobTask{job: job, task: task}:
	case <-q.ctx.Done():
	}
}

// SetCapacity sets the maximum number of concurrent jobs.
func (q *JobQueue) SetCapacity(capacity int) {
	q.capacity = capacity
	// Note: In a real implementation, you would need to handle 
	// resizing the workers channel properly
}
