// Copyright 2024 The O-RAN Near-RT RIC Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package federatedlearning

import (
	"context"
	"crypto/ed25519"
	"time"

	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
)

// FederatedLearningManager defines the interface for the federated learning coordinator.
type FederatedLearningManager interface {
	RegisterClient(ctx context.Context, client *FLClient) error
	UnregisterClient(ctx context.Context, clientID string) error
	GetClient(ctx context.Context, clientID string) (*FLClient, error)
	ListClients(ctx context.Context, selector ClientSelector) ([]*FLClient, error)
	UpdateClientStatus(ctx context.Context, clientID string, status FLClientStatus) error

	StartTraining(ctx context.Context, jobSpec TrainingJobSpec) (*TrainingJob, error)
	// ... other methods
}

// FLClient represents a federated learning client (e.g., an xApp).
type FLClient struct {
	ID              string
	XAppName        string
	Endpoint        string
	Status          FLClientStatus
	RegisteredAt    time.Time
	LastHeartbeat   time.Time
	UpdatedAt       time.Time
	TrustScore      float64
	PublicKey       ed25519.PublicKey
	NetworkSlices   []NetworkSliceInfo
	RRMTasks        []RRMTaskType
	Metadata        map[string]string
}

// TrainingJob represents a federated learning training job.
type TrainingJob struct {
	metav1.TypeMeta   `json:",inline"`
	metav1.ObjectMeta `json:"metadata,omitempty"`

	Spec   TrainingJobSpec   `json:"spec,omitempty"`
	Status TrainingJobStatus `json:"status,omitempty"`
}

// TrainingJobSpec defines the desired state of a TrainingJob.
type TrainingJobSpec struct {
	ModelID        string
	RRMTask        RRMTaskType
	ClientSelector ClientSelector
	TrainingConfig TrainingConfiguration
	Resources      ResourceRequirements
}

// TrainingJobStatus defines the observed state of a TrainingJob.
type TrainingJobStatus struct {
	Phase               TrainingStatus `json:"phase,omitempty"`
	Message             string         `json:"message,omitempty"`
	LastUpdate          metav1.Time    `json:"lastUpdate,omitempty"`
	ParticipatingClients []string       `json:"participatingClients,omitempty"`
}

// Other type definitions (FLClientStatus, RRMTaskType, etc.) would go here.

type FLClientStatus string
type RRMTaskType string
type TrainingStatus string
type ModelFormat string
type AggregationAlgorithm string
type PrivacyMechanism string
type CoordinatorRole string

const (
	FLClientStatusRegistered FLClientStatus = "Registered"
	FLClientStatusIdle       FLClientStatus = "Idle"
	FLClientStatusTraining   FLClientStatus = "Training"
	FLClientStatusError      FLClientStatus = "Error"

	TrainingStatusInitializing TrainingStatus = "Initializing"
	TrainingStatusWaiting      TrainingStatus = "Waiting"
	TrainingStatusRunning      TrainingStatus = "Running"
	TrainingStatusAggregating  TrainingStatus = "Aggregating"
	TrainingStatusCompleted    TrainingStatus = "Completed"
	TrainingStatusFailed       TrainingStatus = "Failed"
	TrainingStatusPaused       TrainingStatus = "Paused"

	ModelFormatTensorFlow ModelFormat = "TensorFlow"
	ModelFormatPyTorch    ModelFormat = "PyTorch"

	AggregationFedAvg  AggregationAlgorithm = "FedAvg"
	AggregationFedProx AggregationAlgorithm = "FedProx"

	PrivacyDifferential PrivacyMechanism = "DifferentialPrivacy"

	MasterCoordinatorRole   CoordinatorRole = "master"
	RegionalCoordinatorRole CoordinatorRole = "regional"
)

// ClientSelector defines criteria for selecting clients for training.
type ClientSelector struct {
	MaxClients       int
	MinTrustScore    float64
	GeographicZone   string
	MatchLabels      map[string]string
	MatchRRMTasks    []RRMTaskType
}

// TrainingConfiguration defines parameters for a training job.
type TrainingConfiguration struct {
	MaxRounds       int64
	MinParticipants int
	MaxParticipants int
	TargetAccuracy  float64
	LearningRate    float64
	BatchSize       int
	LocalEpochs     int
	TimeoutSeconds  int
}

// ResourceRequirements defines the computational resources required for a job.
type ResourceRequirements struct {
	CPU    string
	Memory string
}

// NetworkSliceInfo defines information about a network slice.
type NetworkSliceInfo struct {
	SliceID   string
	TenantID  string
	Isolation bool
}

// GlobalModel represents the global model being trained.
type GlobalModel struct {
	ID             string
	Name           string
	Version        string
	RRMTask        RRMTaskType
	Format         ModelFormat
	Architecture   string
	Parameters     []byte
	ParametersHash string
	TrainingConfig TrainingConfiguration
	AggregationAlg AggregationAlgorithm
	PrivacyMech    PrivacyMechanism
	PrivacyParams  PrivacyParameters
	MaxRounds      int64
	CurrentRound   int64
	TargetAccuracy float64
	Status         TrainingStatus
	ModelMetrics   ModelMetrics
	CreatedAt      time.Time
	UpdatedAt      time.Time
}

// ModelUpdate represents a model update from a client.
type ModelUpdate struct {
	ClientID         string
	ModelID          string
	Round            int64
	Parameters       []byte
	ParametersHash   string
	DataSamplesCount int64
	LocalMetrics     ModelMetrics
	SubmissionTime   time.Time
}

// ModelMetrics represents performance metrics of a model.
type ModelMetrics struct {
	Accuracy float64
	Loss     float64
}

// PrivacyParameters defines parameters for privacy mechanisms.
type PrivacyParameters struct {
	Epsilon float64
	Delta   float64
}

// RoundMetrics represents metrics for a single training round.
type RoundMetrics struct {
	Round             int64
	Timestamp         time.Time
	ParticipatingClients int
	ModelMetrics      ModelMetrics
	AggregationTimeMs float64
}

// ClientStore defines the interface for storing and retrieving client data.
type ClientStore interface {
	Store(ctx context.Context, client *FLClient) error
	Get(ctx context.Context, clientID string) (*FLClient, error)
	List(ctx context.Context) ([]*FLClient, error)
	Delete(ctx context.Context, clientID string) error
}

// ModelStore defines the interface for storing and retrieving global models.
type ModelStore interface {
	CreateGlobalModel(ctx context.Context, model *GlobalModel) error
	GetGlobalModel(ctx context.Context, modelID string) (*GlobalModel, error)
	UpdateGlobalModel(ctx context.Context, model *GlobalModel) error
}

// CryptoEngine defines the interface for cryptographic operations.
type CryptoEngine interface {
	StorePrivateKey(clientID string, privateKey ed25519.PrivateKey) error
	DeleteKeys(clientID string) error
}

// PrivacyEngine defines the interface for privacy-preserving mechanisms.
type PrivacyEngine interface {
	ApplyDifferentialPrivacy(data []byte, epsilon float64) ([]byte, error)
	ValidatePrivacyBudget(clientID string, requestedBudget float64) error
}

// TrustManager defines the interface for managing client trust scores.
type TrustManager interface {
	RegisterClient(ctx context.Context, client *FLClient) error
	UnregisterClient(ctx context.Context, clientID string) error
	UpdateTrustScore(ctx context.Context, clientID string, score float64) error
	GetTrustScore(ctx context.Context, clientID string) (float64, error)
}

// TrainingOrchestrator defines the interface for orchestrating training rounds.
type TrainingOrchestrator interface {
	StartRound(ctx context.Context, job *ActiveTrainingJob) error
	AggregateRound(ctx context.Context, updates []ModelUpdate) (*GlobalModel, error)
	ValidateParticipants(ctx context.Context, participants []*FLClient) error
}

// AggregationEngine defines the interface for model aggregation.
type AggregationEngine interface {
	Aggregate(updates []ModelUpdate, algorithm AggregationAlgorithm, stalenessScores map[string]float64) (*GlobalModel, error)
	ValidateUpdate(update ModelUpdate) error
	ApplyPrivacyMechanism(model *GlobalModel, mechanism PrivacyMechanism) error
}

// MetricsCollector defines the interface for collecting and exposing metrics.
type MetricsCollector interface {
	RecordClientRegistration(client *FLClient)
	RecordClientUnregistration(client *FLClient)
	RecordClientStatusChange(clientID string, oldStatus, newStatus FLClientStatus)
	RecordTrainingJobStart(job *TrainingJob)
	RecordRoundMetrics(metrics RoundMetrics)
	RecordTrainingJobCompletion(job *TrainingJob)
}

// AlertManager defines the interface for sending alerts.
type AlertManager interface {
	SendAlert(alertType, message string, severity string) error
	ConfigureThresholds(thresholds map[string]float64) error
}

// ResourceManager defines the interface for managing computational resources.
type ResourceManager interface {
	CheckAvailability(ctx context.Context, requirements ResourceRequirements) error
	AllocateResources(ctx context.Context, jobID string, requirements ResourceRequirements) error
	ReleaseResources(ctx context.Context, jobID string) error
}

// SchedulingEngine defines the interface for scheduling training jobs.
type SchedulingEngine interface {
	ScheduleJob(ctx context.Context, job *TrainingJob) error
	CancelJob(ctx context.2024/03/15 15:30:00 jobID string) error
	GetScheduledJobs(ctx context.Context) ([]*TrainingJob, error)
}

// AsyncCoordinatorConfig is a placeholder for the full async config.
type AsyncCoordinatorConfig struct {
	CoordinatorConfig CoordinatorConfig
	JobPoolConfig     JobPoolConfig
	MaxInactiveTime   time.Duration
	AggregationWindow time.Duration
	MinParticipationRatio float64
	StalenessThreshold  time.Duration
}

// JobPoolConfig is a placeholder for job pool configuration.
type JobPoolConfig struct {
	MaxConcurrentJobs int
}

// RegionalCoordinatorClient is a placeholder for the regional coordinator client.
type RegionalCoordinatorClient struct {
	Endpoint string
}

// FederatedLearningClient is a placeholder for the gRPC client.
type FederatedLearningClient interface {
	HandleTraining(ctx context.Context, opts ...grpc.CallOption) (FederatedLearning_HandleTrainingClient, error)
}

// FederatedLearning_HandleTrainingClient is a placeholder for the gRPC stream.
type FederatedLearning_HandleTrainingClient interface {
	Send(*TrainingRequest) error
	Recv() (*TrainingResponse, error)
	grpc.ClientStream
}

// TrainingRequest is a placeholder for the gRPC request.
type TrainingRequest struct {
	Request isTrainingRequest_Request
}

type isTrainingRequest_Request interface {
	isTrainingRequest_Request()
}

type TrainingRequest_Registration struct {
	Registration *ClientRegistration
}

func (t *TrainingRequest_Registration) isTrainingRequest_Request() {}

// ClientRegistration is a placeholder for the client registration message.
type ClientRegistration struct {
	XappName string
	Endpoint string
}

// TrainingResponse is a placeholder for the gRPC response.
type TrainingResponse struct {
	Response isTrainingResponse_Response
}

type isTrainingResponse_Response interface {
	isTrainingResponse_Response()
}

type TrainingResponse_Result struct {
	Result *TrainingResult
}

func (t *TrainingResponse_Result) isTrainingResponse_Response() {}

// TrainingResult is a placeholder for the training result message.
type TrainingResult struct{}

// FederatedLearning_HandleTrainingServer is a placeholder for the gRPC server.
type FederatedLearning_HandleTrainingServer interface {
	Send(*TrainingResponse) error
	Recv() (*TrainingRequest, error)
	grpc.ServerStream
}

type TrainingRequest_Update struct {
	Update *ModelUpdate
}

func (t *TrainingRequest_Update) isTrainingRequest_Request() {}

type TrainingRequest_Heartbeat struct {
	Heartbeat *Heartbeat
}

func (t *TrainingRequest_Heartbeat) isTrainingRequest_Request() {}

// Heartbeat is a placeholder for the heartbeat message.
type Heartbeat struct{}
